--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 	<div class="menu"></div>
 </header>
 <div class="pages">
-	<div class="page page-1">
+	<div id="home" class="page home active">
 		<h1>Geo Nerd - Connais tu le monde ?</h1>
 		<div class="game-cards">
 			<div class="game-card">
 				<div class="card-top">
 					<h2 class="card-title">Country Nerd</h2>
-					<a href="#" class="subtitle card-link">Connais tu tous les pays du monde ?</a>
+					<a href="#country-nerd" class="subtitle card-link">Connais tu tous les pays du monde ?</a>
 				</div>
 				<div class="card-bottom">
 					<div class="btn">GO</div>
@@ -38,7 +38,7 @@
 			<div class="game-card">
 				<div class="card-top">
 					<h2 class="card-title">Capital City Nerd</h2>
-					<a href="#" class="subtitle card-link">Et les capitales ?</a>
+					<a href="#capital-nerd" class="subtitle card-link">Et les capitales ?</a>
 				</div>
 				<div class="card-bottom">
 					<div class="btn">GO</div>
@@ -47,7 +47,7 @@
 			<div class="game-card">
 				<div class="card-top">
 					<h2 class="card-title">Flag Nerd</h2>
-					<a href="#" class="subtitle card-link">Pro des drapeaux</a>
+					<a href="#flag-nerd" class="subtitle card-link">Es-tu un pro des drapeaux ?</a>
 				</div>
 				<div class="card-bottom">
 					<div class="btn">GO</div>
@@ -58,9 +58,15 @@
 		<!--			pays du monde ?</h1>-->
 		<!--		<a href="#" class="btn">GO</a>-->
 	</div>
-	<!--	<div class="page page-2">-->
-	<!--		page 2-->
-	<!--	</div>-->
+	<div id="country-nerd" class="page country-nerd">
+		country-nerd
+	</div>
+	<div id="capital-nerd" class="page capital-nerd">
+		capital-nerd
+	</div>
+	<div id="flag-nerd" class="page flag-nerd">
+		flag-nerd
+	</div>
 	<!--	<div class="page page-3">-->
 	<!--		page 3-->
 	<!--	</div>-->
