start country nerd

--- a/index.html
+++ b/index.html
@@ -54,12 +54,44 @@
 				</div>
 			</div>
 		</div>
-		<!--		<h1>Connais tu tous les<br>-->
-		<!--			pays du monde ?</h1>-->
-		<!--		<a href="#" class="btn">GO</a>-->
 	</div>
 	<div id="country-nerd" class="page country-nerd">
-		country-nerd
+		<div class="title-container">
+			<h1>Connais tu tous les<br>
+				pays du monde ?</h1>
+			<div class="game-title">
+				<span class="text">Les pays en : </span>
+				<div class="letter-placeholder"></div>
+			</div>
+		</div>
+		<div class="letters">
+			<div class="letter">A</div>
+			<div class="letter">B</div>
+			<div class="letter">C</div>
+			<div class="letter completed">D</div>
+			<div class="letter">E</div>
+			<div class="letter">F</div>
+			<div class="letter">G</div>
+			<div class="letter">H</div>
+			<div class="letter">I</div>
+			<div class="letter">J</div>
+			<div class="letter">K</div>
+			<div class="letter">L</div>
+			<div class="letter">M</div>
+			<div class="letter">N</div>
+			<div class="letter">O</div>
+			<div class="letter">P</div>
+			<div class="letter">Q</div>
+			<div class="letter">R</div>
+			<div class="letter">S</div>
+			<div class="letter">T</div>
+			<div class="letter">U</div>
+			<div class="letter">V</div>
+			<div class="letter">W</div>
+			<div class="letter">X</div>
+			<div class="letter">Y</div>
+			<div class="letter">Z</div>
+		</div>
 	</div>
 	<div id="capital-nerd" class="page capital-nerd">
 		capital-nerd
@@ -76,7 +108,7 @@
 		© 2022 - Florian Lucas
 	</div>
 </footer>
-<!--<script src="js/lib/gsap/gsap.min.js"></script>-->
 <script src="dist/app.js"></script>
+<script src="dist/libs/gsap.min.js"></script>
 </body>
 </html>
