responsive + icones des jeux

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<img src="img/logo.svg" alt="">
 		<span>Geo Nerd</span>
 	</a>
-	<div class="menu"></div>
+<!--	<div class="menu"></div>-->
 </header>
 <div class="pages">
 	<div id="home" class="page home active">
@@ -28,7 +28,7 @@
 		<div class="game-cards">
 			<div class="game-card">
 				<div class="card-top">
-					<h2 class="card-title">Country Nerd</h2>
+					<h2 class="card-title">Country Nerd<span class="icon icon-country"></span></h2>
 					<a href="#country-nerd" class="subtitle card-link">Connais tu tous les pays du monde ?</a>
 				</div>
 				<div class="card-bottom">
@@ -37,7 +37,7 @@
 			</div>
 			<div class="game-card">
 				<div class="card-top">
-					<h2 class="card-title">Capital City Nerd</h2>
+					<h2 class="card-title">Capital City Nerd<span class="icon icon-capital"></span></h2>
 					<a href="#capital-nerd" class="subtitle card-link">Et les capitales ?</a>
 				</div>
 				<div class="card-bottom">
@@ -46,7 +46,7 @@
 			</div>
 			<div class="game-card">
 				<div class="card-top">
-					<h2 class="card-title">Flag Nerd</h2>
+					<h2 class="card-title">Flag Nerd<span class="icon icon-flag"></span></h2>
 					<a href="#flag-nerd" class="subtitle card-link">Es-tu un pro des drapeaux ?</a>
 				</div>
 				<div class="card-bottom">
@@ -86,8 +86,6 @@
 			<div class="letter">T</div>
 			<div class="letter">U</div>
 			<div class="letter">V</div>
-			<div class="letter">W</div>
-			<div class="letter">X</div>
 			<div class="letter">Y</div>
 			<div class="letter">Z</div>
 		</div>
@@ -99,6 +97,7 @@
 			<div class="answers">
 				<div class="answer"></div>
 			</div>
+			<div class="tip">Pays trouvés : <span class="found">0</span> / <span class="total"></span></div>
 			<a href="/" class="btn won-link hidden">Bravo</a>
 		</div>
 	</div>
