--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:description" content="Connais tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
 	<!--	<meta property="og:image" content="img/og.jpg"/>-->
 
-	<link rel="stylesheet" href="dist/app.css?v=1.0.2">
+	<link rel="stylesheet" href="dist/app.css?v=1.0.3">
 </head>
 <body>
 <header>
@@ -61,7 +61,7 @@
 			<h1>Connais tu tous les<br>
 				pays du monde ?</h1>
 			<div class="game-title">
-				Trouves les pays<br> commençant par<br> la lettre : <span class="letter letter-placeholder"></span>
+				Trouve les pays<br> commençant par<br> la lettre : <span class="letter letter-placeholder"></span>
 			</div>
 		</div>
 		<div class="letters">
@@ -120,10 +120,10 @@
 </div>
 <footer>
 	<div class="copyrights">
-		© 2022 - Florian Lucas
+		© Florian LUCAS - 2022
 	</div>
 </footer>
-<script src="dist/app.js?v=1.0.2"></script>
+<script src="dist/app.js?v=1.0.3"></script>
 <script src="dist/libs/gsap.min.js"></script>
 </body>
 </html>
