--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 	</div>
 	<div id="country-nerd" class="page country-nerd">
 		<div class="title-container">
-			<h1>Connais tu tous les<br>
+			<h1><span class="icon icon-country"></span>Connais tu tous les<br>
 				pays du monde ?</h1>
 			<div class="game-title">
-				Trouve les pays<br> commençant par<br> la lettre : <span class="letter letter-placeholder"></span>
+				<span class="icon icon-country"></span>Trouve les pays<br> commençant par : <span class="letter letter-placeholder"></span>
 			</div>
 		</div>
 		<div class="letters">
