fix message victoire + suppression code drapeau dans le source

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 			<div class="flag-container"></div>
 			<div class="answer-container"></div>
 			<div class="win-message">
-				<p>Bravo, tu connais tous les pays du monde</p>
+				<p><span class="bigger">🏆&nbsp;&nbsp;🌎</span>Impressionant, tu connais donc bien<br>tous les pays du monde&nbsp;!</p>
+				<div class="btn reload">Rejouer ?</div>
 			</div>
 			<div class="loose-message">
 				<p>C'est fini, peux-tu battre ton record</p>
