fix flag size + congo

--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -1,16 +1,7 @@
 <div id="home" class="page home">
 	<h1>Geo Nerd - Connais tu le monde&nbsp;?</h1>
+	<small class="h1-subtitle"><i>( pays membres de l'ONU, nom en version courte )</i></small>
 	<div class="game-cards">
-		<div class="game-card">
-			<div class="card-top">
-				<h2 class="card-title">Country Nerd<span class="icon icon-country"></span></h2>
-				<a href="#country-nerd" class="subtitle card-link">Connais tu tous les pays du monde&nbsp;?</a><br>
-				<small><i>( pays membres de l'ONU, nom en version courte )</i></small>
-			</div>
-			<div class="card-bottom">
-				<div class="btn btn-big">GO</div>
-			</div>
-		</div>
 		<div class="game-card">
 			<div class="card-top">
 				<h2 class="card-title">Flag Nerd<br>Classic<span class="icon icon-flag"></span></h2>
@@ -24,6 +15,15 @@
 			<div class="card-top">
 				<h2 class="card-title">Flag Nerd<br>Hard<span class="icon icon-flag"></span></h2>
 				<a href="#flag-nerd-hard" class="subtitle card-link">Es-tu un pro des drapeaux&nbsp;?</a>
+			</div>
+			<div class="card-bottom">
+				<div class="btn btn-big">GO</div>
+			</div>
+		</div>
+		<div class="game-card">
+			<div class="card-top">
+				<h2 class="card-title">Country Nerd<span class="icon icon-country"></span></h2>
+				<a href="#country-nerd" class="subtitle card-link">Connais tu tous les pays du monde&nbsp;?</a><br>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
