--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -2,8 +2,9 @@
 	<div class="title-container">
 		<h1>Paramétrage</h1>
 		<div class="settings-inner">
+			<div class="btn clear-flag-nerd-classic">Supprimer la sauvegarde Flag Nerd Classic</div>
+			<div class="btn clear-flag-nerd-hard">Supprimer la sauvegarde Flag Nerd Hard</div>
 			<div class="btn clear-country-nerd">Supprimer la sauvegarde Country Nerd</div>
-			<div class="btn clear-flag-nerd">Supprimer la sauvegarde Flag Nerd</div>
 		</div>
 	</div>
 </div>
