wip capitales + typos

--- a/app/pages/country-nerd.html
+++ b/app/pages/country-nerd.html
@@ -1,6 +1,6 @@
 <div id="country-nerd" class="page country-nerd">
 	<div class="title-container">
-		<h1><span class="icon icon-country"></span>Connais tu tous les<br>
+		<h1><span class="icon icon-country"></span>Connais-tu tous les<br>
 			pays du monde&nbsp;?</h1>
 		<div class="game-title">
 			<span class="icon icon-country"></span>Trouve les pays<br> commençant par : <span class="letter letter-placeholder"></span>
