--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -5,11 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
 	<meta name="author" content="Florian LUCAS">
-	<title>Geo Nerd - Connais tu TOUS les pays du monde 2 ?</title>
-	<meta name="description" content="Connais tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
+	<title>Geo Nerd - Connais-tu TOUS les pays du monde 2 ?</title>
+	<meta name="description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
 
 	<meta property="og:title" content="Geo Nerd"/>
-	<meta property="og:description" content="Connais tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
+	<meta property="og:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
 	<!--	<meta property="og:image" content="img/og.jpg"/>-->
 
 	<link rel="stylesheet" href="./app.css?v=0.1.4">
