--- a/app/pages/flag-nerd-classic.html
+++ b/app/pages/flag-nerd-classic.html
@@ -1,6 +1,6 @@
 <div id="flag-nerd-classic" class="page flag-nerd-classic">
 	<div class="title-container">
-		<h1>Connais tu tous les<br>
+		<h1>Connais-tu tous les<br>
 			drapeaux du monde&nbsp;?</h1>
 	</div>
 	<div class="progress-container">
