added capital city nerd game

--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -22,6 +22,24 @@
 		</div>
 		<div class="game-card">
 			<div class="card-top">
+				<h2 class="card-title">Capital City<br>Nerd Classic<span class="icon icon-capital"></span></h2>
+				<a href="#capital-nerd-classic" class="subtitle card-link">Connais-tu les capitales&nbsp;?</a>
+			</div>
+			<div class="card-bottom">
+				<div class="btn btn-big">GO</div>
+			</div>
+		</div>
+		<div class="game-card">
+			<div class="card-top">
+				<h2 class="card-title">Capital City<br>Nerd Hard<span class="icon icon-capital"></span></h2>
+				<a href="#capital-nerd-hard" class="subtitle card-link">Connais-tu les capitales et les drapeaux&nbsp;?</a>
+			</div>
+			<div class="card-bottom">
+				<div class="btn btn-big">GO</div>
+			</div>
+		</div>
+		<div class="game-card">
+			<div class="card-top">
 				<h2 class="card-title">Country Nerd<span class="icon icon-country"></span></h2>
 				<a href="#country-nerd" class="subtitle card-link">Connais-tu tous les pays du monde&nbsp;?</a><br>
 			</div>
