--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
 	<!--	<meta property="og:image" content="img/og.jpg"/>-->
 
-	<link rel="stylesheet" href="./app.css?v=0.1.4">
+	<link rel="stylesheet" href="./app.css?v=0.2.1">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF373XWBVF"></script>
@@ -41,14 +41,16 @@
 	@@include("country-nerd.html")
 	@@include("flag-nerd-classic.html")
 	@@include("flag-nerd-hard.html")
+	@@include("capital-nerd-classic.html")
+	@@include("capital-nerd-hard.html")
 	@@include("settings.html")
 </div>
 <footer>
 	<div class="copyrights">
-		© Florian LUCAS - 2022 - v0.1.4
+		© Florian LUCAS - 2022 - v0.2.1
 	</div>
 </footer>
-<script src="./app.js?v=0.1.4"></script>
+<script src="./app.js?v=0.2.1"></script>
 <script src="./libs/gsap.min.js"></script>
 </body>
 </html>
