--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -4,6 +4,8 @@
 		<div class="settings-inner">
 			<div class="btn clear-flag-nerd-classic">Supprimer la sauvegarde Flag Nerd Classic</div>
 			<div class="btn clear-flag-nerd-hard">Supprimer la sauvegarde Flag Nerd Hard</div>
+			<div class="btn clear-capital-nerd-classic">Supprimer la sauvegarde Capital City Nerd Classic</div>
+			<div class="btn clear-capital-nerd-hard">Supprimer la sauvegarde Capital City Nerd Hard</div>
 			<div class="btn clear-country-nerd">Supprimer la sauvegarde Country Nerd</div>
 		</div>
 	</div>
