--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -5,7 +5,7 @@
 		<div class="game-card">
 			<div class="card-top">
 				<h2 class="card-title">Flag Nerd<br>Classic<span class="icon icon-flag"></span></h2>
-				<a href="#flag-nerd-classic" class="subtitle card-link">Connais-tu les drapeaux&nbsp;?</a>
+				<a href="#flag-nerd-classic" class="subtitle card-link">4 propositions de drapeaux</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
@@ -14,7 +14,7 @@
 		<div class="game-card">
 			<div class="card-top">
 				<h2 class="card-title">Flag Nerd<br>Hard<span class="icon icon-flag"></span></h2>
-				<a href="#flag-nerd-hard" class="subtitle card-link">Es-tu un pro des drapeaux&nbsp;?</a>
+				<a href="#flag-nerd-hard" class="subtitle card-link">Aucune proposition&nbsp;!</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
@@ -23,7 +23,7 @@
 		<div class="game-card">
 			<div class="card-top">
 				<h2 class="card-title">Capital City<br>Nerd Classic<span class="icon icon-capital"></span></h2>
-				<a href="#capital-nerd-classic" class="subtitle card-link">Connais-tu les capitales&nbsp;?</a>
+				<a href="#capital-nerd-classic" class="subtitle card-link">Le drapeau du pays + 4 propositions</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
@@ -32,7 +32,7 @@
 		<div class="game-card">
 			<div class="card-top">
 				<h2 class="card-title">Capital City<br>Nerd Hard<span class="icon icon-capital"></span></h2>
-				<a href="#capital-nerd-hard" class="subtitle card-link">Connais-tu les capitales et les drapeaux&nbsp;?</a>
+				<a href="#capital-nerd-hard" class="subtitle card-link">Le drapeau du pays uniquement&nbsp;!</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
