fix country overflow + new logo

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
 	<!--	<meta property="og:image" content="img/og.jpg"/>-->
 
-	<link rel="stylesheet" href="./app.css?v=0.2.2">
+	<link rel="stylesheet" href="./app.css?v=0.2.4">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF373XWBVF"></script>
@@ -31,8 +31,7 @@
 <body>
 <header>
 	<a href="/" class="logo">
-		<img src="img/logo.svg" alt="">
-		<span>Geo Nerd</span>
+		<img src="img/geonerd.svg" alt="">
 	</a>
 	<a href="#settings" class="menu"></a>
 </header>
@@ -47,10 +46,10 @@
 </div>
 <footer>
 	<div class="copyrights">
-		© Florian LUCAS - 2022 - v0.2.2
+		© Florian LUCAS - 2022 - v0.2.4
 	</div>
 </footer>
-<script src="./app.js?v=0.2.2"></script>
+<script src="./app.js?v=0.2.4"></script>
 <script src="./libs/gsap.min.js"></script>
 </body>
 </html>
