--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -1,6 +1,6 @@
 <div id="home" class="page home">
-	<h1>Geo Nerd - Connais-tu le monde&nbsp;?</h1>
-	<small class="h1-subtitle"><i>( pays membres de l'ONU, nom en version courte )</i></small>
+	<h1><small>Geo Nerd</small>Connais-tu le monde&nbsp;?</h1>
+<!--	<small class="h1-subtitle"><i>( pays membres de l'ONU, nom en version courte )</i></small>-->
 	<div class="game-cards">
 		<div class="game-card">
 			<div class="card-top">
