--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -2,45 +2,50 @@
 	<h1><small>Geo Nerd</small>Connais-tu le monde&nbsp;?</h1>
 <!--	<small class="h1-subtitle"><i>( pays membres de l'ONU, nom en version courte )</i></small>-->
 	<div class="game-cards">
-		<div class="game-card">
+		<div class="game-card flag-nerd-classic">
+			<div class="background"></div>
 			<div class="card-top">
-				<h2 class="card-title">Flag Nerd<br>Classic<span class="icon icon-flag"></span></h2>
+				<h2 class="card-title"><div class="classic">Classic</div>Flag Nerd<span class="icon icon-flag"></span></h2>
 				<a href="#flag-nerd-classic" class="subtitle card-link">4 propositions de drapeaux</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
 			</div>
 		</div>
-		<div class="game-card">
+		<div class="game-card flag-nerd-hard">
+			<div class="background"></div>
 			<div class="card-top">
-				<h2 class="card-title">Flag Nerd<br>Hard<span class="icon icon-flag"></span></h2>
+				<h2 class="card-title"><div class="hard">Hard</div>Flag Nerd<span class="icon icon-flag"></span></h2>
 				<a href="#flag-nerd-hard" class="subtitle card-link">Aucune proposition&nbsp;!</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
 			</div>
 		</div>
-		<div class="game-card">
+		<div class="game-card capital-nerd-classic">
+			<div class="background"></div>
 			<div class="card-top">
-				<h2 class="card-title">Capital City<br>Nerd Classic<span class="icon icon-capital"></span></h2>
+				<h2 class="card-title"><div class="classic">Classic</div>Capital Nerd<span class="icon icon-capital"></span></h2>
 				<a href="#capital-nerd-classic" class="subtitle card-link">Le drapeau du pays + 4 propositions</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
 			</div>
 		</div>
-		<div class="game-card">
+		<div class="game-card capital-nerd-hard">
+			<div class="background"></div>
 			<div class="card-top">
-				<h2 class="card-title">Capital City<br>Nerd Hard<span class="icon icon-capital"></span></h2>
+				<h2 class="card-title"><div class="hard">Hard</div>Capital Nerd<span class="icon icon-capital"></span></h2>
 				<a href="#capital-nerd-hard" class="subtitle card-link">Le drapeau du pays uniquement&nbsp;!</a>
 			</div>
 			<div class="card-bottom">
 				<div class="btn btn-big">GO</div>
 			</div>
 		</div>
-		<div class="game-card">
+		<div class="game-card country-nerd">
+			<div class="background"></div>
 			<div class="card-top">
-				<h2 class="card-title">Country Nerd<span class="icon icon-country"></span></h2>
+				<h2 class="card-title"><div class="hard">Hard</div>Country Nerd<span class="icon icon-country"></span></h2>
 				<a href="#country-nerd" class="subtitle card-link">Connais-tu tous les pays du monde&nbsp;?</a><br>
 			</div>
 			<div class="card-bottom">
