grouped classic/hard mode in one game card (s/o to scamander)

--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -2,11 +2,14 @@
 	<div class="title-container">
 		<h1>Paramétrage</h1>
 		<div class="settings-inner">
-			<div class="btn clear-flag-nerd-classic">Supprimer la sauvegarde Flag Nerd Classic</div>
-			<div class="btn clear-flag-nerd-hard">Supprimer la sauvegarde Flag Nerd Hard</div>
-			<div class="btn clear-capital-nerd-classic">Supprimer la sauvegarde Capital City Nerd Classic</div>
-			<div class="btn clear-capital-nerd-hard">Supprimer la sauvegarde Capital City Nerd Hard</div>
-			<div class="btn clear-country-nerd">Supprimer la sauvegarde Country Nerd</div>
+			<h2>Flag nerd</h2>
+			<div class="btn clear-flag-nerd-classic classic">Supprimer la sauvegarde Classic</div>
+			<div class="btn clear-flag-nerd-hard hard">Supprimer la sauvegarde Hard</div>
+			<h2>Capital Nerd</h2>
+			<div class="btn clear-capital-nerd-classic classic">Supprimer la sauvegarde Classic</div>
+			<div class="btn clear-capital-nerd-hard hard">Supprimer la sauvegarde Hard</div>
+			<h2>Country Nerd</h2>
+			<div class="btn clear-country-nerd classic">Supprimer la sauvegarde</div>
 		</div>
 	</div>
 </div>
