--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -10,9 +10,9 @@
 
 	<meta property="og:title" content="Geo Nerd"/>
 	<meta property="og:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
-	<!--	<meta property="og:image" content="img/og.jpg"/>-->
+	<meta property="og:image" content="/img/geonerd-og.jpg"/>
 
-	<link rel="stylesheet" href="./app.css?v=0.3.3">
+	<link rel="stylesheet" href="./app.css?v=0.3.4">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF373XWBVF"></script>
@@ -46,10 +46,10 @@
 </div>
 <footer>
 	<div class="copyrights">
-		© Florian LUCAS - 2022 - v0.3.3
+		© Florian LUCAS - 2022 - v0.3.4
 	</div>
 </footer>
-<script src="./app.js?v=0.3.3"></script>
+<script src="./app.js?v=0.3.4"></script>
 <script src="./libs/gsap.min.js"></script>
 </body>
 </html>
