--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -8,9 +8,20 @@
 	<title>Geo Nerd - Connais-tu TOUS les pays du monde 2 ?</title>
 	<meta name="description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
 
-	<meta property="og:title" content="Geo Nerd"/>
-	<meta property="og:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?"/>
-	<meta property="og:image" content="/img/geonerd-og.jpg"/>
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://geonerd.husk.fr/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Geo Nerd">
+	<meta property="og:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?">
+	<meta property="og:image" content="https://geonerd.husk.fr/img/geonerd-og.jpg">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="geonerd.husk.fr">
+	<meta property="twitter:url" content="https://geonerd.husk.fr/">
+	<meta name="twitter:title" content="Geo Nerd">
+	<meta name="twitter:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?">
+	<meta name="twitter:image" content="https://geonerd.husk.fr/img/geonerd-og.jpg">
 
 	<link rel="stylesheet" href="./app.css?v=0.3.4">
 
