--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -67,7 +67,7 @@
 </div>
 <footer>
 	<div class="copyrights">
-		© Florian LUCAS - 2022 - v0.3.8
+		© Florian LUCAS - 2022 - <a href="https://github.com/lucasflorian/geonerd" target="_blank" rel="noreferrer noopener nofollow">v0.3.8</a>
 	</div>
 </footer>
 <script src="./app.js?v=0.3.8"></script>
