fix win message mobile + remove last answer

--- a/app/pages/flag-nerd-hard.html
+++ b/app/pages/flag-nerd-hard.html
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 		<div class="win-message">
-			<p><span class="bigger">🏆&nbsp;&nbsp;🌎</span>Impressionant, tu connais donc bien<br>tous les pays du monde&nbsp;!</p>
+			<p><span class="bigger">🏆&nbsp;&nbsp;🌎</span>Impressionant, tu connais donc bien&nbsp;<br>tous les pays du monde&nbsp;!</p>
 			<div class="btn reload">Rejouer ?</div>
 		</div>
 		<div class="loose-message">
