--- a/app/pages/capital-nerd-hard.html
+++ b/app/pages/capital-nerd-hard.html
@@ -43,7 +43,7 @@
 		<div class="flag-container"></div>
 		<div class="answer-container"></div>
 		<div class="win-message">
-			<p><span class="bigger">🏆&nbsp;&nbsp;🌎</span>Impressionant, tu connais donc bien&nbsp;<br>toutes les capitales du monde&nbsp;!</p>
+			<p><span class="bigger">🏆&nbsp;&nbsp;🌎</span>Impressionnant, tu connais donc bien&nbsp;<br>toutes les capitales du monde&nbsp;!</p>
 			<div class="btn reload">Rejouer ?</div>
 		</div>
 		<div class="loose-message">
