--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -34,7 +34,7 @@
 	<meta name="twitter:description" content="Connais-tu tous les pays du monde ? et leurs capitales, ok mais les drapeaux aussi ?">
 	<meta name="twitter:image" content="https://geonerd.husk.fr/img/geonerd-og.jpg">
 
-	<link rel="stylesheet" href="./app.css?v=0.3.11">
+	<link rel="stylesheet" href="./app.css?v=0.4.0">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF373XWBVF"></script>
@@ -63,14 +63,16 @@
 	@@include("flag-nerd-hard.html")
 	@@include("capital-nerd-classic.html")
 	@@include("capital-nerd-hard.html")
+	@@include("map-nerd-classic.html")
 	@@include("settings.html")
 </div>
 <footer>
 	<div class="copyrights">
-		© Florian LUCAS - 2022 - <a href="https://github.com/lucasflorian/geonerd" target="_blank" rel="noreferrer noopener nofollow">v0.3.11</a>
+		© Florian LUCAS - 2022 - <a href="https://github.com/lucasflorian/geonerd" target="_blank" rel="noreferrer noopener nofollow">v0.4.0</a>
 	</div>
 </footer>
-<script src="./app.js?v=0.3.11"></script>
+<script src="./app.js?v=0.4.0"></script>
 <script src="./libs/gsap.min.js"></script>
+<script src="./libs/zoom-by-ironex.min.js"></script>
 </body>
 </html>
