--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -66,7 +66,7 @@
 				<div class="card-first-step">
 					<div class="card-top">
 						<h2 class="card-title">Map<br>Nerd<span class="icon icon-flag"></span></h2>
-						<p class="subtitle">Pro des pays&nbsp;?</p>
+						<p class="subtitle">Pro des pays&nbsp;?<br>- Coming soon -</p>
 					</div>
 					<div class="card-bottom">
 						<div class="btn btn-big">GO</div>
