--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -73,6 +73,7 @@
 </footer>
 <script src="./app.js?v=0.4.0"></script>
 <script src="./libs/gsap.min.js"></script>
-<script src="./libs/zoom-by-ironex.min.js"></script>
+<!--<script src="./libs/zoom-by-ironex.min.js"></script>-->
+<script src="./libs/zoom.js"></script>
 </body>
 </html>
