--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -10,8 +10,8 @@
 			<div class="btn clear-capital-nerd-hard hard">Supprimer la sauvegarde Hard</div>
 			<h2>Country Nerd</h2>
 			<div class="btn clear-country-nerd classic">Supprimer la sauvegarde</div>
-			<h2>Map Nerd</h2>
-			<div class="btn clear-map-nerd-classic classic">Supprimer la sauvegarde</div>
+<!--			<h2>Map Nerd</h2>-->
+<!--			<div class="btn clear-map-nerd-classic classic">Supprimer la sauvegarde</div>-->
 		</div>
 	</div>
 </div>
