--- a/app/pages/flag-nerd-hard.html
+++ b/app/pages/flag-nerd-hard.html
@@ -49,11 +49,11 @@
 		</div>
 		<div class="win-message">
 			<p><span class="bigger">🏆&nbsp;&nbsp;🌎</span>Impressionnant, tu connais donc bien&nbsp;<br>tous les pays du monde&nbsp;!</p>
-			<div class="btn reload">Rejouer ?</div>
+			<div class="btn reload">Rejouer&nbsp;?</div>
 		</div>
 		<div class="loose-message">
 			<p>C'est fini, peux-tu battre ton record</p>
-			<div class="btn reload">Rejouer ?</div>
+			<div class="btn reload">Rejouer&nbsp;?</div>
 		</div>
 	</div>
 </div>
