--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -60,22 +60,22 @@
 		<!-- ------------ -->
 		<!-- MAP NERD -->
 		<!-- ------------ -->
-		<div class="game-card has-levels map-nerd">
-			<div class="background"></div>
-			<div class="card-inner">
-				<div class="card-first-step">
-					<div class="card-top">
-						<h2 class="card-title">Map<br>Nerd<span class="icon icon-flag"></span></h2>
-						<p class="subtitle">Pro des pays&nbsp;?<br>- Coming soon -</p>
-					</div>
-					<div class="card-bottom">
-						<div class="btn btn-big">GO</div>
-					</div>
-				</div>
-				<div class="card-second-step">
-					<a href="#map-nerd-classic" class="btn btn-big card-mode-link classic">Classic</a>
-				</div>
-			</div>
-		</div>
+<!--		<div class="game-card has-levels map-nerd">-->
+<!--			<div class="background"></div>-->
+<!--			<div class="card-inner">-->
+<!--				<div class="card-first-step">-->
+<!--					<div class="card-top">-->
+<!--						<h2 class="card-title">Map<br>Nerd<span class="icon icon-flag"></span></h2>-->
+<!--						<p class="subtitle">Pro des pays&nbsp;?<br>- Coming soon -</p>-->
+<!--					</div>-->
+<!--					<div class="card-bottom">-->
+<!--						<div class="btn btn-big">GO</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="card-second-step">-->
+<!--					<a href="#map-nerd-classic" class="btn btn-big card-mode-link classic">Classic</a>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
 	</div>
 </div>
