--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -68,12 +68,12 @@
 </div>
 <footer>
 	<div class="copyrights">
-		© Florian LUCAS - 2023 - <a href="https://github.com/lucasflorian/geonerd" target="_blank" rel="noreferrer noopener nofollow">v0.4.1</a>
+		© Florian LUCAS - 2024 - <a href="https://github.com/lucasflorian/geonerd" target="_blank" rel="noreferrer noopener nofollow">v0.4.2</a>
 	</div>
 </footer>
-<script src="./app.js?v=0.4.0"></script>
+<script src="./app.js?v=0.4.2"></script>
 <script src="./libs/gsap.min.js"></script>
 <!--<script src="./libs/zoom-by-ironex.min.js"></script>-->
-<script src="./libs/zoom.js"></script>
+<!--<script src="./libs/zoom.js"></script>-->
 </body>
 </html>
