--- a/app/pages/map-nerd-classic.html
+++ b/app/pages/map-nerd-classic.html
@@ -9,11 +9,11 @@
 		</div>
 		<div class="win-message">
 			<p><span class="bigger">🏆&nbsp;&nbsp;🌎</span>Impressionnant, t’es un vrai&nbsp;<br>pro des pays du monde&nbsp;!</p>
-			<div class="btn reload">Rejouer ?</div>
+			<div class="btn reload">Rejouer&nbsp;?</div>
 		</div>
 		<div class="loose-message">
 			<p>C'est fini, peux-tu battre ton record</p>
-			<div class="btn reload">Rejouer ?</div>
+			<div class="btn reload">Rejouer&nbsp;?</div>
 		</div>
 	</div>
 </div>
